--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -116,6 +116,7 @@ body.cp-app-pad {
         background-color: @bg-color;
         justify-content: center;
         iframe {
+            background-color: transparent;
             flex: 1;
             min-width: 0;
             order: 1;
